--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -86,7 +86,7 @@ a, li{
     height:100vh;
     background-image: 
          linear-gradient(0deg, rgba(35, 4, 39, 0.6), rgba(35, 4, 39, 0.6)),
-         url(/assets/img/floralPaint.jpg);
+         url(assets/img/floralPaint.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     
