--- a/css/style.css
+++ b/css/style.css
@@ -87,7 +87,7 @@ a, li{
 
     background-image: 
     linear-gradient(0deg, rgba(35, 4, 39, 0.6), rgba(35, 4, 39, 0.6)),
-    url(/assets/img/floralPaint.jpg);
+    url(/img/floralPaint.jpg);
 
     background-size: cover;
     background-repeat: no-repeat;
