--- a/css/style.css
+++ b/css/style.css
@@ -85,7 +85,7 @@ a, li{
 .header-hero{ 
     height:100vh;
 
-    background-image:url(./img/floralPaint.jpg);
+    background-image:url(/img/floralPaint.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     
