--- a/css/style.css
+++ b/css/style.css
@@ -85,7 +85,9 @@ a, li{
 .header-hero{ 
     height:100vh;
 
-    background-image:url('../img/floralPaint.jpg');
+    background-image:
+     linear-gradient(0deg, rgba(35, 4, 39, 0.6), rgba(35, 4, 39, 0.6)),
+     url('../img/floralPaint.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     
